--- a/school-site/css/style.css
+++ b/school-site/css/style.css
@@ -79,41 +79,149 @@ header, footer {
 
 /* Imported Typfaces */
 
+@font-face {
+    font-family:'josefinslab';
+    src:url(../fonts/josefinslab-regular.ttf) format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
 
-
-
+@font-face {
+    font-family:'montserrat';
+    src:url(../fonts/montserrat-regular.ttf) format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
 
 /* Typography Styles */
 
+html {
+    font-family: 'montserrat', sans-serif;    
+}
 
+h1 {
+    font-family:'josefinslab',sans-serif;
+    font-size:3.75rem;
+    letter-spacing: 0.125rem;
+    margin: 1.125em; 
+    text-align: center;
+    
+}
 
+h2 {
+    font-family: 'josefinslab';
+    font-size: 1.5rem;
+    letter-spacing: 0.125rem;
+}
 
+h2 + p {
+    text-indent: 1.5em;
+    
+}
+
+p {
+    font-size: 0.75rem;
+    letter-spacing: 0.031rem;
+    word-spacing: 0.125rem;
+}
+
+li {
+    font-size: 0.75rem;
+    letter-spacing: 0.031rem;
+    word-spacing: 0.125rem;
+}
+
+figcaption {
+    font-size:0.75rem;
+    margin-bottom: 2rem;
+    font-family: 'montserrat', sans-serif;
+}
 
 
 /* Link Styling */
 
+a {
+    outline: none;
+}
 
+a:link,
+a:visited {
+    color: #33658A;
+}
 
-
+a:focus,
+a:hover {
+    text-decoration: none;
+}
 
 
 /* List Styling */
 
+ul {
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+    margin-left: 0;
+    margin-right: 0;
+    list-style-type: square;
+    font-size: 0.75rem;
+    letter-spacing: 0.031rem;
+    word-spacing: 0.125rem;
+}
 
+ol {
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+    margin-left: 0;
+    margin-right: 0;
+    padding-left: 2rem;
+    list-style-type: lower-alpha;
+    font-size: 0.75rem;
+    letter-spacing: 0.031rem;
+    word-spacing: 0.125rem;
+}
 
-
+.long-list a:hover {
+    text-transform: uppercase;
+}
 
 
 /* Navigation Menu */
 
+nav {
+    margin-left: 0;
+    margin-top: 0.25rem;
+}
+
+nav a {
+    text-decoration: none;
+    display: inline-block;
+    width: 100%;
+    line-height: 3;
+    text-align: center; 
+    font-size: 1.125rem;
+    margin-bottom: 1.5rem;
+    border: 0.063rem solid #33658A;
 
 
+}
 
+nav a:focus,
+nav a:hover {
+    color: #FFF;
+    background-color: #33658A;
+}
+
+nav a:active {
+    color:#FFF;
+    background-color: #000;
+}
 
 
 /* Footer Styles */
 
-
+footer {
+    text-align: center;
+}
 
 
 
